syntax = "proto3";

option java_package = "discop.protobuf.msg";


message Ping {
    string foo = 1;
}
message Pong {}


message RunJob {
    uint64 job_id = 1;
    bytes wasi_bytes = 2;
}
